<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Round &amp; Split</string>
    <string name="action_settings">Settings</string>
    <string name="pref_title_version">Version</string>
    <string name="pref_category_about">About</string>
    <string name="pref_key_version">AppVersion</string>
    <string name="pref_key_email_us">EmailAction</string>
    <string name="title_activity_text_file_viewer">Text File</string>
    <string name="default_amount">0.00</string>
    <string name="info_text_tips">TIP</string>
    <string name="info_text_total">TOTAL</string>
    <string name="split_and_pay_request_button_title">Split and Email Reminder</string>
    <string name="info_text_effective_rate">Effective rate</string>
    <string name="info_text_non_percentage">–</string>
    <string name="pref_key_use_us_decimal_point">UsePeriodDecimalPoint</string>
    <string name="pref_category_contact_and_service">Contact and Service</string>
    <string name="pref_acknowledgements">Acknowledgements</string>
    <string name="pref_title_visit_website">Visit Website</string>
    <string name="website_url">https://roundandsplit.lukhnos.org</string>
    <string name="pref_title_email_us">Email Us</string>
    <string name="pref_category_settings">Settings</string>
    <string name="pref_title_use_us_decimal_point"><![CDATA[Use \".\" for Decimal Point]]></string>
    <string name="pref_summary_use_us_decimal_point"><![CDATA[By default, the app assumes you are living or traveling in a region where \".\" is used – for example, 9.99. When turned off, it will observe the Region Format settings on your phone.]]></string>
    <string name="request_action_prefix">Request</string>
    <string name="send_action_prefix">Email that I Owe</string>
    <string name="cancel_action">Cancel</string>
    <string name="split_dialog_title">Send a reminder?
You can adjust the amount later.</string>
    <string name="request_subject_prefix">You owe me %s</string>
    <string name="send_subject_prefix">I owe you %s</string>
    <string name="title_activity_settings2">SettingsActivity2</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>
